Create Candidates implemented
