# docs/swagger.json
@@ -13,6 +13,48 @@
         }
     },
     "paths": {
+        "/createCandidate": {
+            "post": {
+                "description": "Create new candidate",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create candidate",
+                "parameters": [
+                    {
+                        "description": "name search by id",
+                        "name": "id",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        },
+                        "headers": {
+                            "Token": {
+                                "type": "string",
+                                "description": "qwerty"
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/readCandidate": {
             "get": {
                 "description": "Read all candidates",
